# ckanext-vocabulary-services

./: MANIFEST.in  README.md  example.csv  pyproject.toml  requirements.txt  setup.cfg  setup.py
ckanext/vocabulary_service/: blueprint.py  command.py  plugin.py
ckanext/vocabulary_service/logic/action/: create.py  get.py
ckanext/vocabulary_service/templates/vocabulary/: index.html
ckanext/vocabulary_services/: blueprint.py  cli.py  command.py  helpers.py  model.py  plugin.py  validator.py
ckanext/vocabulary_services/fanstatic/: add-edit-form.js  webassets.yml
ckanext/vocabulary_services/logic/action/: create.py  get.py  update.py
ckanext/vocabulary_services/migration/versions/: 26af172f336f_add_definition_to_vocabulary_service.py  8316ab08511a_add_allow_duplicate_terms_column.py  94c4b4dc84db_add_columns_to_vocab_service_and_term.py
ckanext/vocabulary_services/migration/vocabulary_services/: alembic.ini
ckanext/vocabulary_services/migration/vocabulary_services/versions/: 001_7a9188e57d4e_add_schema_and_linked_schema_field.py  001_7a9188e57d4e_create_tables.py  002_cdce2303c1ec_add_quantity_kind_field.py  002_cdce2303c1ec_add_schema_and_linked_schema_field.py  003_31274b0206aa_add_quantity_kind_field.py  003_8efb2a4d3a5a_add_data_type_column.py
ckanext/vocabulary_services/secure/: blueprint.py  crypt.py  helpers.py  key.key  plugin.py  secure_vocabularies.json  test.csv
ckanext/vocabulary_services/secure/logic/action/: get.py
ckanext/vocabulary_services/secure/templates/admin/: base.html
ckanext/vocabulary_services/templates/admin/: base.html
ckanext/vocabulary_services/templates/emails/body/: vocab_service_invalid_urls.html  vocab_service_invalid_urls.txt
ckanext/vocabulary_services/templates/vocabulary/: index.html  secure_upload.html  terms.html
csv_examples/: format.csv  nature-of-relationship  temporal-resolution-ranges.csv
