[project]
name = "ckanext-vocabulary-services"
version = "3.0.1"
description = "CKAN extension for QDES"
authors = [
	{name = "Salsa Digital", email = "developers@salsa.digital"},
	]
maintainers = [
	{name = "Mark Calvert", email = "mark.calvert@salsa.digital"},
	{name = "Konstantin Sivakov", email = "konstantin.sivakov@salsa.digital"},
	{name = "Awang Setyawan", email = "awang.setyawan@salsa.digital"},
	]
license = "AGPL-3.0"
readme = "README.md"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Framework :: CKAN",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: GNU Affero General Public License v3",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Topic :: Internet :: WWW/HTTP",
	"Topic :: Internet :: WWW/HTTP :: Dynamic Content",
	"Topic :: Software Development :: Libraries :: Python Modules",
	]
keywords = ["ckan", "extension", "vocabulary-services"]

dependencies = []

[project.urls]
Repository = "https://github.com/salsadigitalauorg/ckanext-vocabulary-services"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.entry-points."ckan.plugins"]
vocabulary_services="ckanext.vocabulary_services.plugin:VocabularyServicesPlugin"
secure_vocabularies="ckanext.vocabulary_services.secure.plugin:SecureVocabulariesPlugin"

