[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
babel.extractors =
	ckan = ckan.lib.extract:extract_ckan

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/vocabulary-service/i18n/ckanext-vocabulary-service.pot
width = 80

[init_catalog]
domain = ckanext-vocabulary-service
input_file = ckanext/vocabulary-service/i18n/ckanext-vocabulary-service.pot
output_dir = ckanext/vocabulary-service/i18n

[update_catalog]
domain = ckanext-vocabulary-service
input_file = ckanext/vocabulary-service/i18n/ckanext-vocabulary-service.pot
output_dir = ckanext/vocabulary-service/i18n
previous = true

[compile_catalog]
domain = ckanext-vocabulary-service
directory = ckanext/vocabulary-service/i18n
statistics = true